lab3/ingress.yaml
apiVersion: networking.k8s.io/v1   
kind: Ingress   
metadata:   
  name: appingress  
spec:   
  rules:   
  - host: lab3kuznetsov.info  
    http:   
      paths:   
      - path: /  
        pathType: Prefix   
        backend:   
          service:   
            name: frontend-app
            port:   
              number: 3000
  tls:
  - hosts:
    - lab3kuznetsov.info
    secretName: sertificate
